Add more logging

--- a/donate.html
+++ b/donate.html
@@ -1094,6 +1094,7 @@
       }
       console.log("Do we get here before step 3 validation.")
       console.log("any errors before step 3 validation", step_has_errors)
+      console.log("We are currently at step -->", step)
       if (step == "3" && !step_has_errors) {
         step_has_errors = step_3_validation();
         console.log(step_has_errors, "In the validate step function")
