--- a/donate.html
+++ b/donate.html
@@ -531,6 +531,11 @@
               <label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>	
               <input id="id_name" class="ak-input-type-user" type="text" name="name">	
             </div>	
+            <!--Email-->
+            <div class="input-text ak-input-type-user input-field-group">
+                <label class="required" for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
+                <input id="id_email" class="" type="text" name="email">
+              </div>
             <!--Credit Card-->
             <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user cc-fields">	
               <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>	
