Add in the tabs section for the purpose of the functionality. #step 1

--- a/donate.html
+++ b/donate.html
@@ -507,7 +507,7 @@
 
         <div class="ak-donate-area-step-3 form-style-labelabove ak-errs-below">
           <h5 class="margin-bottom-normal">{% filter ak_text:"donate_payment_information" %}Payment Information{% endfilter %}</h5>
-          <!-- <div class="payments-container">
+          <div class="payments-container">
               <div class="payments-titles">
                 <div class="payments-title payments-title-active card-title">
                     <span>Card</span>
@@ -524,7 +524,7 @@
                 <div id="payments-details-content">
 
                 </div>
-           </div> -->
+           </div>
 
           <!--Name-->
             <div class="input-text ak-input-type-user cc-fields">	
