--- a/donate.html
+++ b/donate.html
@@ -581,6 +581,12 @@
               {% endautoescape %}	
             </div>	
           {% endif %}	
+          {% if show_paypal %}
+	        <div class="ak-payment-options text-center ak-donate-area-step-3">
+	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
+						<p class="margin-bottom-small text-small"><em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em> <button type="submit" id="ak-paypal-button" class="button bg-ltgray button-small">Continue with PayPal</button></p>
+	        </div>
+				{% endif %}
           </div><!--ak-styled-fields-->
 
 {% autoescape off %}
@@ -606,12 +612,6 @@
 				{% else %}
         	<button type="submit" class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">Donate <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span><span class="ak-donation-monthly" style="display: none;">/mo</span></button>
         {% endif %}
-        {% if show_paypal %}
-	        <div class="ak-payment-options text-center ak-donate-area-step-3">
-	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
-						<p class="margin-bottom-small text-small"><em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em> <button type="submit" id="ak-paypal-button" class="button bg-ltgray button-small"><img src="/media/modern/paypal-logo-1.svg" style="position:relative;top:3px;"></button></p>
-	        </div>
-				{% endif %}
 
 
 				</div>
@@ -1627,10 +1627,9 @@
           // Update Content
           if(clicked.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
               paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-              continueButton.text('Continue to PayPal')
           } else {
               paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-              continueButton.text('Continue')
+    
           }
       });
     })
