--- a/donate.html
+++ b/donate.html
@@ -526,8 +526,8 @@
                 </div>
            </div>
 
-          <!--Name-->
-            <div class="input-text ak-input-type-user cc-fields">	
+            <!--Name-->
+            <div class="input-text ak-input-type-user">	
               <label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>	
               <input id="id_name" class="ak-input-type-user" type="text" name="name">	
             </div>	
@@ -582,11 +582,11 @@
             </div>	
           {% endif %}	
           {% if show_paypal %}
-	        <div class="ak-payment-options text-center ak-donate-area-step-3">
+	        <div class="ak-payment-options text-center ak-donate-area-step-3 paypal-fields">
 	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
             <p class="margin-bottom-small text-small">
               <!-- <em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em>  -->
-              <button type="submit" id="ak-paypal-button" class="ak-styled-submit-button">Continue with PayPal</button></p>
+              <button type="submit" id="ak-paypal-button" class="button">Continue with PayPal</button></p>
 	        </div>
 				  {% endif %}
           </div><!--ak-styled-fields-->
@@ -1591,11 +1591,23 @@
     const paymentsDetailsContent = $("#payments-details-content");
     const continueButton = $("#ak-continue-button");
 
+    // Get CC Fields
+    const ccFields = $(".cc-fields");
+    const paypalFields = $("paypal-fields");
+
     // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD); // Insert HTML using JS. // Commented Out for Attempt #1
     const removeActivePaymentsClass = () => {
       $.each(paymentsTitles, (index, title)=>{
           const titleCtn = $(title);
           titleCtn.removeClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
+      });
+    };
+
+    // Use this to hide fields as appropriately
+    const hideFields = (fields) => {
+      $.each(fields, (index, field)=>{
+        const fieldCtn = $(field);
+        field.css({'display': 'none'});
       });
     };
 
@@ -1612,10 +1624,11 @@
 
             if(closestDiv.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
                 paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-                continueButton.text('Continue to PayPal')
+                hideFields(ccFields);
             } else {
                 paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-                continueButton.text('Continue')
+                hideFields(paypalFields);
+   
             }
             removeActivePaymentsClass();
             closestDiv.addClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
@@ -1629,8 +1642,10 @@
           // Update Content
           if(clicked.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
               paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
+              hideFields(ccFields);
           } else {
               paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
+              hideFields(paypalFields);
     
           }
       });
