Fix bug with selection of container. #step 6

--- a/donate.html
+++ b/donate.html
@@ -1607,7 +1607,7 @@
     const hideFields = (fields) => {
       $.each(fields, (index, field)=>{
         const fieldCtn = $(field);
-        field.css({'display': 'none'});
+        fieldCtn.css({'display': 'none'});
       });
     };
 
