--- a/donate.html
+++ b/donate.html
@@ -1604,10 +1604,10 @@
     };
 
     // Use this to hide fields as appropriately
-    const hideFields = (fields) => {
+    const toggleShowFields = (fields, show) => {
       $.each(fields, (index, field)=>{
         const fieldCtn = $(field);
-        fieldCtn.css({'display': 'none'});
+        fieldCtn.css({'display': show ? 'block': 'none'});
       });
     };
 
@@ -1624,10 +1624,12 @@
 
             if(closestDiv.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
                 // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-                hideFields(ccFields);
+                toggleShowFields(paypalFields, true);
+                toggleShowFields(ccFields, false);
             } else {
                 // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-                hideFields(paypalFields);
+                toggleShowFields(ccFields, true);
+                toggleShowFields(paypalFields, false);
    
             }
             removeActivePaymentsClass();
@@ -1642,10 +1644,12 @@
           // Update Content
           if(clicked.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
               // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
-              hideFields(ccFields);
+              toggleShowFields(paypalFields, true);
+              toggleShowFields(ccFields, false);
           } else {
               // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
-              hideFields(paypalFields);
+              toggleShowFields(ccFields, true);
+              toggleShowFields(paypalFields, false);
     
           }
       });
