--- a/donate.html
+++ b/donate.html
@@ -586,7 +586,7 @@
 	        	<input type="hidden" name="paypal" value="0" id="ak-pay-by-paypal">
             <p class="margin-bottom-small text-small">
               <!-- <em>{% filter ak_text:"donate_or_check_out_with" %}or check out with{% endfilter %} </em>  -->
-              <button type="submit" id="ak-paypal-button" class="button">Continue with PayPal</button></p>
+              <button type="submit" id="ak-paypal-button" class="button paypal-fields">Continue with PayPal</button></p>
 	        </div>
 				  {% endif %}
           </div><!--ak-styled-fields-->
@@ -607,12 +607,12 @@
 				  For pages that use CSE, the submit button will be enabled by javascript above.
 				  {% endcomment %}
 
-	        <button disabled="true" type="submit" class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"donate_submit_button" %}Donate{% endfilter %}{% endif %} <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span><span class="ak-donation-monthly" style="display: none;">/mo</span></button>
+	        <button disabled="true" type="submit" class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal cc-fields">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"donate_submit_button" %}Donate{% endfilter %}{% endif %} <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span><span class="ak-donation-monthly" style="display: none;">/mo</span></button>
 	        <noscript>
 	          <p><b>JavaScript is required</b> so this page can securely submit your donation.</p>
 	      	</noscript>
 				{% else %}
-        	<button type="submit" class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal">Donate <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span><span class="ak-donation-monthly" style="display: none;">/mo</span></button>
+        	<button type="submit" class="ak-submit-button button ak-donate-area-step-3 margin-bottom-normal cc-fields">Donate <span class="ak-currency-sym">{{ page.currency_sym }}</span><span class="ak-donation-total-amount"></span><span class="ak-donation-monthly" style="display: none;">/mo</span></button>
         {% endif %}
 
 
@@ -1516,80 +1516,10 @@
             PAYPAL_TARGET_CLASS: "paypal-title"
     };
 
-    const PAYMENTS_DETAILS_CONTENTS = {
-          CREDIT_CARD: `
-					<div class="input-text ak-input-type-user input-field-group">
-						<label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
-						<input id="id_name" class="ak-input-type-user" type="text" name="name">
-					</div>
-					<div class="input-text ak-input-type-user input-field-group">
-						<label class="required" for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
-						<input id="id_email" class="" type="text" name="email">
-					</div>
-					<div class="cc-fields">
-	          <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user">
-					    <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>
-					    <input type="hidden" name="required" value="card_num" id="ak-card_num-required">
-					    <div id="ak-card_num-hosted" class="hosted-field"></div>
-					    <input id="ak-card_num" type="text" name="card_num">
-						</div>
-						<div class="ak-err-below">
-							<div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c10 margin-top-none">
-				        <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">
-				        <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>
-				        <div id="ak-exp_date-hosted" class="hosted-field"></div>
-				        <select id="ak-exp_date_month" class="input-cc-expiration-month c4 ct4 cm4 no-margin" type="text" name="exp_date_month">
-			            <option value="">MM</option>
-			            <option value="01">01</option>
-			            <option value="02">02</option>
-			            <option value="03">03</option>
-			            <option value="04">04</option>
-			            <option value="05">05</option>
-			            <option value="06">06</option>
-			            <option value="07">07</option>
-			            <option value="08">08</option>
-			            <option value="09">09</option>
-			            <option value="10">10</option>
-			            <option value="11">11</option>
-			            <option value="12">12</option>
-								</select>
-				        <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">
-				        <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin" name="exp_date_year">
-			            <option value="">YYYY</option>
-	{% for year in exp_years %}
-			            <option value="{{ year.two }}">{{ year.four }}</option>
-	{% endfor %}
-				        </select>
-								<div class="clear"></div>
-							</div>
-						</div>
-						<div class="clear"></div>
-					</div>
-					{% if templateset.custom_fields.pre_submit_text %}
-					<div class="pre-submit-text">
-						{% autoescape off %}
-							{{ templateset.custom_fields.pre_submit_text }}
-						{% endautoescape %}
-					</div>
-        {% endif %}
-              `,
-              PAYPAL: `<div class="paypal-fields">
-                  <div class="input-text ak-input-type-user">
-                <label class="required" for="id_email">Name</label>
-                <input id="id_email" class="" type="text" name="email">
-              </div>
-                  <div class="input-text ak-input-type-user">
-                <label class="required" for="id_email">Email Address</label>
-                <input id="id_email" class="" type="text" name="email">
-              </div>
-
-                  </div>`
-      }
-
-    const paymentsCtn = $(".payments-container");
+    // const paymentsCtn = $(".payments-container");
     const paymentsTitles = $(".payments-title");
-    const paymentsDetailsContent = $("#payments-details-content");
-    const continueButton = $("#ak-continue-button");
+    // const paymentsDetailsContent = $("#payments-details-content");
+    // const continueButton = $("#ak-continue-button");
 
     // Get CC Fields
     const ccFields = $(".cc-fields");
@@ -1623,11 +1553,9 @@
             const closestDiv = clicked.closest('.payments-title');
 
             if(closestDiv.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
-                // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
                 toggleShowFields(paypalFields, true);
                 toggleShowFields(ccFields, false);
             } else {
-                // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
                 toggleShowFields(ccFields, true);
                 toggleShowFields(paypalFields, false);
    
@@ -1643,11 +1571,9 @@
 
           // Update Content
           if(clicked.hasClass(CONSTANTS.PAYPAL_TARGET_CLASS)){
-              // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.PAYPAL);
               toggleShowFields(paypalFields, true);
               toggleShowFields(ccFields, false);
           } else {
-              // paymentsDetailsContent.html(PAYMENTS_DETAILS_CONTENTS.CREDIT_CARD);
               toggleShowFields(ccFields, true);
               toggleShowFields(paypalFields, false);
     
