added ak-err-below to exp field's div

--- a/donate.html
+++ b/donate.html
@@ -544,8 +544,7 @@
               <input id="ak-card_num" type="text" name="card_num">	
             </div>
             <!--Error-->	
-            <div class="ak-err-below">	
-              <div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user c10 margin-top-none cc-fields">	
+              <div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user cc-fields ak-err-below">	
                 <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">	
                 <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>	
                 <div id="ak-exp_date-hosted" class="hosted-field"></div>	
@@ -573,7 +572,6 @@
                 </select>	
                 <div class="clear"></div>	
               </div>	
-            </div>	
             {% if templateset.custom_fields.pre_submit_text %}	
             <div class="pre-submit-text">	
               {% autoescape off %}	
