--- a/donate.html
+++ b/donate.html
@@ -322,7 +322,7 @@
               <image href="https://dbqvwi2zcv14h.cloudfront.net/ak-dev/monthly-heart.svg" width="50" height="50"></image>
             </svg>
             <div id="bubble-text">
-              <div class="once-chosen">{% filter ak_text:"donate_make_it monthly" %}<strong>Make it monthly?</strong> Sustaining donations help us plan and focus on the
+              <div class="once-chosen">{% filter ak_text:"donate_make_it_monthly" %}<strong>Make it monthly?</strong> Sustaining donations help us plan and focus on the
                 future.{% endfilter %}</div>
               <div class='monthly-chosen hidden'><strong>Thank you for choosing a monthly donation!</strong><br>
                 Giving monthly helps us plan for big, bold actions and fight back against the fossil fuel industry at key moments
