oops another typo

--- a/donate.html
+++ b/donate.html
@@ -313,8 +313,8 @@
           <div class="input-checkbox text-strong margin-bottom-none">
             <input type="checkbox" hidden name="donation_type" id="id_donation_type_recurring" value="recurring">
             <span class="toggle-donation-type">
-              <span class="toggle-once">{% filter ak_text:"donate_once" %}Donate once{% endif %}</span>
-              <span class="toggle-monthly">{% filter ak_text:"donate_monthly" %}Donate monthly{% endif %}</span>
+              <span class="toggle-once">{% filter ak_text:"donate_once" %}Donate once{% endfilter %}</span>
+              <span class="toggle-monthly">{% filter ak_text:"donate_monthly" %}Donate monthly{% endfilter %}</span>
             </span>
           </div>
           <div id="donation-toggle-bubble">
