--- a/donate.html
+++ b/donate.html
@@ -324,9 +324,9 @@
             <div id="bubble-text">
               <div class="once-chosen">{% filter ak_text:"donate_make_it_monthly" %}<strong>Make it monthly?</strong> Sustaining donations help us plan and focus on the
                 future.{% endfilter %}</div>
-              <div class='monthly-chosen hidden'><strong>Thank you for choosing a monthly donation!</strong><br>
+              <div class='monthly-chosen hidden'>{% filter ak_text:"donate_monthly_thank_you" %}<strong>Thank you for choosing a monthly donation!</strong><br>
                 Giving monthly helps us plan for big, bold actions and fight back against the fossil fuel industry at key moments
-                around the world. Thank you.</div>
+                around the world. Thank you.{% endfilter %}</div>
             </div>
           </div>
         </div>
