--- a/donate.html
+++ b/donate.html
@@ -314,7 +314,7 @@
             <input type="checkbox" hidden name="donation_type" id="id_donation_type_recurring" value="recurring">
             <span class="toggle-donation-type">
               <span class="toggle-once">{% filter ak_text:"donate_once" %}Donate once{% endfilter %}</span>
-              <span class="toggle-monthly">{% filter ak_text:"donate_monthly_monthly" %}Donate monthly{% endfilter %}</span>
+              <span class="toggle-monthly">{% filter ak_text:"donate_donate_monthly" %}Donate monthly{% endfilter %}</span>
             </span>
           </div>
           <div id="donation-toggle-bubble">
