--- a/donate.html
+++ b/donate.html
@@ -897,41 +897,61 @@
         } )
     }
 
-    function mark_step_complete(current_step) {
-      if (current_step != 3) {
+    function show_tick(current_step) {
+      if (current_step !== "3") {
+        // hide step number
         $('input[name="ak-donate-step"]:checked')
           .closest('label')
           .find('span.ak-step-number')
           .addClass('hidden');
 
-        // show complete tick
+        // show tick
         $('input[name="ak-donate-step"]:checked')
           .closest('label')
           .find('span.ak-step-complete')
           .removeClass('hidden');
       }
-        // change amount label if step 1 is complete
-        if (current_step == 1) {
-          var amount_container = $('li.ak-amount-container label.ak-radio-checked');
-          var amount = document.querySelector('li.ak-amount-container>label>span.ak-currency-sym').innerHTML;
-          var button_amount = amount_container.find('span.ak-amount-button-amount').text();
-          var custom_amount = document.querySelector('#ak-other-amount-field').value;
-          if (!custom_amount) amount += button_amount;
-          else amount += custom_amount;
-          if ($('#id_donation_type_recurring').is(':checked')) {
-            amount += '/mo';
-          }
-          else {
-            amount.replace('/mo','');
-          }
-          console.log('button amount',button_amount, 'custom amount', custom_amount, 'amount', amount);
-          $('input[name="ak-donate-step"]:checked')
-            .closest('label')
-            .find('span.ak-amount-label')
-            // .html(amount+'<span class="ak-donation-monthly">/mo</span>')
-            .html(amount)
-            .css({"text-decoration": "underline"});
+    }
+
+    function hide_tick(current_step) {
+      if (current_step !== "3") {
+        // show step number
+        $('input[name="ak-donate-step"]:checked')
+          .closest('label')
+          .find('span.ak-step-number')
+          .removeClass('hidden');
+
+        // hide tick
+        $('input[name="ak-donate-step"]:checked')
+          .closest('label')
+          .find('span.ak-step-complete')
+          .addClass('hidden');
+      }
+    }
+
+    function change_step_one_label() {
+      // change amount label if step 1 is complete
+      if (current_step === "1") {
+        var amount_container = $('li.ak-amount-container label.ak-radio-checked');
+        var amount = document.querySelector('li.ak-amount-container>label>span.ak-currency-sym').innerHTML;
+        var button_amount = amount_container.find('span.ak-amount-button-amount').text();
+        var custom_amount = document.querySelector('#ak-other-amount-field').value;
+        if (!custom_amount) amount += button_amount;
+        else amount += custom_amount;
+        if ($('#id_donation_type_recurring').is(':checked')) {
+          amount += '/mo';
         }
+        else {
+          amount.replace('/mo', '');
+        }
+        console.log('button amount', button_amount, 'custom amount', custom_amount, 'amount', amount);
+        $('input[name="ak-donate-step"]:checked')
+          .closest('label')
+          .find('span.ak-amount-label')
+          // .html(amount+'<span class="ak-donation-monthly">/mo</span>')
+          .html(amount)
+          .css({ "text-decoration": "underline" });
+      }
     }
 
     let step_has_errors = false;
@@ -943,7 +963,7 @@
         validate_step(current_step);
 
         if (!step_has_errors) {
-          mark_step_complete(current_step);
+          show_tick(current_step);
 
           // check radio button in next step
           $('input[name="ak-donate-step"]:checked')
@@ -966,6 +986,13 @@
 	    // skip validation if we're going backwards
 	    if (current_step < next) {
 	        validate_step(current_step);
+
+          if ( !step_has_errors ) {
+            show_tick(current_step);
+            change_step_one_label();
+          } else {
+            hide_tick(current_step);
+          }
 	    }
 
 	    // can't skip over a step unless it's already been completed
@@ -973,7 +1000,6 @@
 	    if ( (! step_has_errors) && (current_step == 1) && (next == 3) ) {
 	      validate_step("2");
 	      if ( step_has_errors ) {
-          mark_step_complete(current_step);
           $('#ak-donate-step-2').prop('checked', true);
 	        three_step_reveal();
 	        return;
@@ -983,7 +1009,6 @@
 	    // allow the user to go back even if there are errors
 	    if (current_step > next || !step_has_errors) {
         // only mark current step as complete if it has no errors
-        if(!step_has_errors) mark_step_complete(current_step);
         $('#ak-donate-step-' + next).prop('checked', true);
 	      three_step_reveal();
 	    }
