fix: add change_step_one_label function to three_step_advance

--- a/donate.html
+++ b/donate.html
@@ -964,7 +964,7 @@
 
         if (!step_has_errors) {
           show_tick(current_step);
-
+          change_step_one_label();
           // check radio button in next step
           $('input[name="ak-donate-step"]:checked')
 						.closest('label')
