--- a/donate.html
+++ b/donate.html
@@ -951,91 +951,122 @@
         } )
     }
 
-    function mark_step_complete(current_step) {
-      if (current_step != 3) {
-        $('input[name="ak-donate-step"]:checked')
-          .closest('label')
-          .find('span.ak-step-number')
-          .addClass('hidden');
+    function show_tick(current_step) {
+        if (current_step !== "3") {
+          // hide step number
+          $('input[name="ak-donate-step"]:checked')
+            .closest('label')
+            .find('span.ak-step-number')
+            .addClass('hidden');
 
-        // show complete tick
-        $('input[name="ak-donate-step"]:checked')
-          .closest('label')
-          .find('span.ak-step-complete')
-          .removeClass('hidden');
+          // show tick
+          $('input[name="ak-donate-step"]:checked')
+            .closest('label')
+            .find('span.ak-step-complete')
+            .removeClass('hidden');
+        }
       }
+
+      function hide_tick(current_step) {
+        if (current_step !== "3") {
+          // show step number
+          $('input[name="ak-donate-step"]:checked')
+            .closest('label')
+            .find('span.ak-step-number')
+            .removeClass('hidden');
+
+          // hide tick
+          $('input[name="ak-donate-step"]:checked')
+            .closest('label')
+            .find('span.ak-step-complete')
+            .addClass('hidden');
+        }
+      }
+
+      function change_step_one_label() {
         // change amount label if step 1 is complete
-        if (current_step == 1) {
+        if (current_step === "1") {
           var amount_container = $('li.ak-amount-container label.ak-radio-checked');
           var amount = document.querySelector('li.ak-amount-container>label>span.ak-currency-sym').innerHTML;
           var button_amount = amount_container.find('span.ak-amount-button-amount').text();
           var custom_amount = document.querySelector('#ak-other-amount-field').value;
-          var final_amount = '';
           if (!custom_amount) amount += button_amount;
           else amount += custom_amount;
-          console.log('button amount',button_amount, 'custom amount', custom_amount, 'amount', amount);
+          if ($('#id_donation_type_recurring').is(':checked')) {
+            amount += '/mo';
+          }
+          else {
+            amount.replace('/mo', '');
+          }
+          console.log('button amount', button_amount, 'custom amount', custom_amount, 'amount', amount);
           $('input[name="ak-donate-step"]:checked')
             .closest('label')
             .find('span.ak-amount-label')
             // .html(amount+'<span class="ak-donation-monthly">/mo</span>')
             .html(amount)
-            .css({"text-decoration": "underline"});
+            .css({ "text-decoration": "underline" });
         }
-    }
+      }
 
-    let step_has_errors = false;
-    function three_step_advance() {
-				console.log('three_step_advance() fired');
+      let step_has_errors = false;
+      function three_step_advance() {
+        console.log('three_step_advance() fired');
 
         // trigger validation on the step we're leaving
-        let current_step = $('input[name="ak-donate-step"]:checked').val() || '1';
+        var current_step = $('input[name="ak-donate-step"]:checked').val();
         validate_step(current_step);
 
         if (!step_has_errors) {
-          mark_step_complete(current_step);
-
+          show_tick(current_step);
+          change_step_one_label();
           // check radio button in next step
           $('input[name="ak-donate-step"]:checked')
-						.closest('label')
-						.removeClass('active-step')
-						.next('label')
-						.addClass('active-step')
-						.find('input[type="radio"]')
+            .closest('label')
+            .removeClass('active-step')
+            .next('label')
+            .addClass('active-step')
+            .find('input[type="radio"]')
             .prop('checked', true);
 
-		      three_step_reveal();
+          three_step_reveal();
         }
-    }
+      }
 
-    function three_step_goto(next) {
-			console.log('three_step_goto() fired');
-	    // trigger validation on the step we're leaving
-	    var current_step = $('input[name="ak-donate-step"]:checked').val() || '1';
+      function three_step_goto(next) {
+        console.log('three_step_goto() fired');
+        // trigger validation on the step we're leaving
+        var current_step = $('input[name="ak-donate-step"]:checked').val();
 
-	    // skip validation if we're going backwards
-	    if (current_step < next) {
-	        validate_step(current_step);
-	    }
+        // skip validation if we're going backwards
+        if (current_step < next) {
+          validate_step(current_step);
 
-	    // can't skip over a step unless it's already been completed
-			console.log('three_step_goto: step_has_errors = ' + step_has_errors + ', current_step = ' + current_step + ', next = ' + next);
-	    if ( (! step_has_errors) && (current_step == 1) && (next == 3) ) {
-	      validate_step(2);
-	      if ( step_has_errors ) {
-          mark_step_complete(current_step);
-          $('#ak-donate-step-2').prop('checked', true);
-	        three_step_reveal();
-	        return;
-	      }
-	    }
+          if (!step_has_errors) {
+            show_tick(current_step);
+            change_step_one_label();
+          } else {
+            hide_tick(current_step);
+          }
+        }
 
-	    // allow the user to go back even if there are errors
-	    if (current_step > next || !step_has_errors) {
-        mark_step_complete(current_step);
-        $('#ak-donate-step-' + next).prop('checked', true);
-	      three_step_reveal();
-	    }
-	  }
+        // can't skip over a step unless it's already been completed
+        console.log('three_step_goto: step_has_errors = ' + step_has_errors + ', current_step = ' + current_step + ', next = ' + next);
+        if ((!step_has_errors) && (current_step == 1) && (next == 3)) {
+          validate_step("2");
+          if (step_has_errors) {
+            $('#ak-donate-step-2').prop('checked', true);
+            three_step_reveal();
+            return;
+          }
+        }
+
+        // allow the user to go back even if there are errors
+        if (current_step > next || !step_has_errors) {
+          // only mark current step as complete if it has no errors
+          $('#ak-donate-step-' + next).prop('checked', true);
+          three_step_reveal();
+        }
+      }
 
     function validate_product_count ( field ) {
         var product_count = field.value;
