fix: adding hide_tick function in three_step_advance func

--- a/donate.html
+++ b/donate.html
@@ -1029,6 +1029,8 @@
             .prop('checked', true);
 
           three_step_reveal();
+        } else {
+          hide_tick(current_step);
         }
       }
 
