fix: seeing if tick will be white in safari

--- a/donate.html
+++ b/donate.html
@@ -104,17 +104,17 @@
     <div class="ak-donate-menu ak-donate-three-step ak-donate-three-step-visible text-center margin-bottom-none box text-small bg-white-trans">
         <label class="ak-donate-step ak-donate-step-1 active-step" for="ak-donate-step-1">
             <span class="ak-step-number strong inline-dot bg-dkgray-trans">1</span>
-            <span class="ak-step-complete inline-dot bg-dkgray-trans hidden">&#10004;</span>&nbsp;<span class="ak-amount-label">{% filter ak_text:"donate_step_1_amount" %}Amount{% endfilter %}</span>
+            <span class="ak-step-complete inline-dot bg-dkgray-trans hidden">✔</span>&nbsp;<span class="ak-amount-label">{% filter ak_text:"donate_step_1_amount" %}Amount{% endfilter %}</span>
             <input type="radio" id="ak-donate-step-1" class="hidden" name="ak-donate-step" value="1" checked="checked">
         </label>
         <label class="ak-donate-step ak-donate-step-2" for="ak-donate-step-2">
             <span class="ak-step-number strong inline-dot bg-dkgray-trans">2</span>
-            <span class="ak-step-complete inline-dot bg-dkgray-trans hidden">&#10004;</span>&nbsp;<span>{% filter ak_text:"donate_step_2_info" %}Info{% endfilter %}</span>
+            <span class="ak-step-complete inline-dot bg-dkgray-trans hidden">✔</span>&nbsp;<span>{% filter ak_text:"donate_step_2_info" %}Info{% endfilter %}</span>
             <input type="radio" id="ak-donate-step-2" class="hidden" name="ak-donate-step" value="2">
         </label>
         <label class="ak-donate-step ak-donate-step-3" for="ak-donate-step-3">
             <span class="ak-step-number strong inline-dot bg-dkgray-trans">3</span>
-            <span class="ak-step-complete inline-dot bg-dkgray-trans hidden">&#10004;</span>&nbsp;<span>{% filter ak_text:"donate_step_3_payment" %}Payment{% endfilter %}</span>
+            <span class="ak-step-complete inline-dot bg-dkgray-trans hidden">✔</span>&nbsp;<span>{% filter ak_text:"donate_step_3_payment" %}Payment{% endfilter %}</span>
             <input type="radio" id="ak-donate-step-3" class="hidden" name="ak-donate-step" value="3">
         </label>
     </div>
