fix: showing heart when monthly selected

--- a/donate.html
+++ b/donate.html
@@ -313,7 +313,7 @@
           </span>
         </div>
         <div id="donation-toggle-bubble">
-          <svg id="monthly-heart" class="monthly-chosen hidden" width="50" height="50">
+          <svg id="monthly-heart" class="monthly-chosen" width="50" height="50">
             <image href="https://dbqvwi2zcv14h.cloudfront.net/ak-dev/monthly-heart.svg" width="50" height="50"></image>
           </svg>
           <div id="bubble-text">
