style: centering text in buttons and changing pos of bubble arrow

--- a/donate.html
+++ b/donate.html
@@ -312,7 +312,7 @@
             <span class="toggle-option-2 toggle-once">{% filter ak_text:"donate_once" %}Donate once{% endfilter %}</span>
           </span>
         </div>
-        <div id="donation-toggle-bubble">
+        <div id="donation-toggle-bubble" class="default-monthly">
           <svg id="monthly-heart" class="monthly-chosen" width="50" height="50">
             <image href="https://dbqvwi2zcv14h.cloudfront.net/ak-dev/monthly-heart.svg" width="50" height="50"></image>
           </svg>
@@ -338,7 +338,7 @@
               <span class="toggle-option-2 toggle-monthly">{% filter ak_text:"donate_donate_monthly" %}Donate monthly{% endfilter %}</span>
             </span>
           </div>
-          <div id="donation-toggle-bubble">
+          <div id="donation-toggle-bubble" class="default-once">
             <svg id="monthly-heart" class="monthly-chosen hidden" width="50" height="50">
               <image href="https://dbqvwi2zcv14h.cloudfront.net/ak-dev/monthly-heart.svg" width="50" height="50"></image>
             </svg>
